ScratchpadTest + archival note on readme